Creat css page for For selling electronic devices- Not completed yet

--- a/index.html
+++ b/index.html
@@ -23,8 +23,10 @@
             <li><a href="#">Shoping Cart</a></li>
         </ul>
     </nav>
+    </div>
     <div class="logo">
-        <a href="#"><img src="logo.png" alt="ECHO TECH"></a>
+        <img src="logo.png" alt="Website Logo">
+        
     </div>
 </div>
 </header>
