fix html page  - some new change made

--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="This is webpage For selling electronic devices">
   <meta name="keywords" content="electronic devices phone cam ">
+  <link rel="stylesheet" href=
+"https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.css">
   <link rel="stylesheet" href="src/styles/style.css">
+
   <title>ECHO TECH WEBSITE </title>
 </head>
 <body>
@@ -113,24 +116,20 @@
     </div>
 </section>
  </main>
- <footer>
+ <footer class="footer">
+    <div class="social-icon" role="list" aria-label="social">
+        <i class="fa-brands fa-facebook" ></i>
+        <i class="fa-brands fa-twitter" ></i>
+        <i class="fa-brands fa-instagram" ></i>
+     </div>
+    <ul class="menu"  role="list" aria-label="footer-list">
+      <li class="menu__item"><a class="menu__link" href="#">Privacy Policy</a></li>
+      <li class="menu__item"><a class="menu__link" href="#">Terms of Service</a></li>
+      <li class="menu__item"><a class="menu__link" href="#">Contact</a></li>
 
-    <nav id="footer-nav" aria-label="Main">
-        <ul>
-            <li><a href="#">Privacy Policy</a></li>
-            <li><a href="#">Terms of Service</a></li>
-        </ul>
-    </nav>
-    <div class="contact-info">
-        <p>Contact Us: ECHOTECHt@store.com</p>
-    </div>
+    </ul>
+    <p>&copy;2023 ECHO-TECH | All Rights Reserved</p>
+  </footer> 
 
-    <div class="social-media">
-        <a href="#" class="icon">Facebook</a>
-        <a href="#" class="icon">Twitter</a>
-        <a href="#" class="icon">Instagram</a>
-    </div>
-
-</footer>
 </body>
 </html>
