Add SASS file with Level 1: Basic Requirements

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta name="keywords" content="electronic devices phone cam ">
   <link rel="stylesheet" href=
 "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.css">
-  <link rel="stylesheet" href="src/styles/style.css">
+  <link rel="stylesheet" href="src/styles/newStyle.css">
 
   <title>ECHO TECH WEBSITE </title>
 </head>
